# emdevif_test_framework

./: .gitignore  CMakeLists.txt  README.md  xmake.lua
.github/workflows/: build_and_test.yml
inc/: emdevif_test_framework-with_prefix.h  emdevif_test_framework.h  rmdev_test_framework-no_prefix.h  rmdev_test_framework-with_prefix.h  rmdev_test_framework.h
inc/emdevif_test_framework/: check_bool_macro.h  check_float_point_macro.h  check_int_macro.h  check_str_macro.h  check_uint_macro.h  compare_auxiliary_macro.h  core.h
inc/rmdev_test_framework/: check_bool_macro.h  check_float_point_macro.h  check_int_macro.h  check_str_macro.h  check_uint_macro.h  compare_auxiliary_macro.h  core.h
src/: emdevif_test_framework.c  rmdev_test_framework.c
test/: CMakeLists.txt  main.c  test_function_impl.c  test_function_impl.h  xmake.lua
test/integration_test/: CMakeLists.txt  assert_test.expected  case_contex_test.expected  classic_test.expected  clear_file_line.py  cpp_test.expected  no_case_test.expected  no_suit_test.expected
test/integration_test/assert_test/: CMakeLists.txt  main.c
test/integration_test/case_contex_test/: CMakeLists.txt  main.c
test/integration_test/classic_test/: CMakeLists.txt  external_test.c  external_test.h  main.c  test_function_impl.c  test_function_impl.h
test/integration_test/cpp_test/: CMakeLists.txt  main.cpp
test/integration_test/no_case_test/: CMakeLists.txt  main.c
test/integration_test/no_suit_test/: CMakeLists.txt  main.c
test/integration_test/test_func_impl/: CMakeLists.txt  test_function_impl.h
test/stm32f407ighx/: CMakeLists.txt  stm32f407_platform_test.ioc  stm32f407ighx_flash.ld
test/stm32f407ighx/Core/Inc/: stm32f4xx_it.h
test/stm32f407ighx/Core/Src/: dma.c  gpio.c  main.c  stm32f4xx_it.c  usart.c
test/stm32f407ighx/PlatformTestImpl/: platform_test_impl.c  platform_test_impl.h
test/stm32f407ighx/cmake/: gcc-arm-none-eabi.cmake
test/stm32f407ighx/cmake/stm32cubemx/: CMakeLists.txt
test/windows/: CMakeLists.txt  external_test.c  external_test.h  main.c  test_function_impl.c
