if (DEFINED RMDEV_TEST_FRAMEWORK_TEST_NAME)
    if (RMDEV_TEST_FRAMEWORK_TEST_NAME STREQUAL "integration_test")
        add_subdirectory(integration_test)
    else ()
        message(WARNING "Unsupported platform for test of rmdev_test_framework: ${RMDEV_TEST_FRAMEWORK_TEST_NAME}. Skipping.")

        unset(RMDEV_TEST_FRAMEWORK_TEST_NAME)
    endif ()
else ()
    message(WARNING "RMDEV_TEST_FRAMEWORK_TEST_NAME is not defined, so test of rmdev_test_framework skipped. Please set it to a valid platform (e.g., windows or STM32F407).")
endif ()
